# dg_fem_code

./: CMakeLists.txt  README.md  simple_mesh.txt
executables/: test_mesh
include/mesh/: Mesh.hpp
jobs/: submit_job.sh
outputs/: gpu_practice.o1202136  gpu_practice.o1202139  gpu_practice.o1202140
src/mesh/: Mesh.cpp  generate_Mesh.cpp
test/: test.cpp
test/mesh/: test_elem2elem.cpp  test_generate_mesh.cpp  test_mesh.cpp
